--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "protoreact",
   "main": "server.js",
   "dependencies": {
-    "bluebird": "2.6.2",
     "bootstrap": "^3.3.1",
     "browserify-middleware": "^4.1.0",
     "express": "^4.10.4",
@@ -13,11 +12,9 @@
     "less-middleware": "^1.0.4",
     "nunjucks": "^1.1.0",
     "react": "^0.12.1",
-    "react-router": "^0.11.4",
     "reactify": "^0.17.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"no tests yet\" && exit 0"
+    "start": "node server.js"
   }
 }
